[package]
name = "hello"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
sqlx = { version = "0.8.6" ,features = ["postgres", "chrono","runtime-tokio"]}
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
